--- a/package.json
+++ b/package.json
@@ -69,5 +69,5 @@
     "typescript": "4.6.2",
     "react-error-overlay": "6.0.9"
   },
-  "repository": "git@github.com:alibaba/lowcode-engine.git"
+  "repository": "git@github.com:hantts666/lowcode-engine.git"
 }
